Fix skins in viewer not loading, represent lives through item count
Signed-off-by: Aura6 <aura1391215@gmail.com>